# Trabalho-Final-Lab-Redes

./: CMakeLists.txt
Arquivos_Client/: Client.c  Defines_e_Estruturas.c  Funcoes_de_Manipulacao.c  client
Arquivos_Server/: Comunicacao.c  Defines_e_Estruturas.c  Manipulacao_de_Arquivos.c  Server.c  server
Include/: Defines_e_Estruturas.h  Lib.h  versioncfg.h.in
Lib/: CMakeLists.txt  Comunicacao.c  Defines_e_Estruturas.c  Manipulacao_de_Arquivos.c
